name:               persistent-odbc
version:            0.1.2.0
synopsis:           Backend for the persistent library using ODBC
description:        Based on HDBC-ODBC. Functionality for modifying db-schema is not supported. Such functionality should be supported in additional packages specified for database like persistent-odbc-oracle, persistent-odbc-msql and so on.
license:            MIT
license-file:       LICENSE
author:             Dmitry Olshansky
maintainer:         OlshanskyDR@gmail.com
category:           Database, Yesod
cabal-version:      >= 1.8
build-type:         Simple
stability:          Experimental

Flag debug
        Default: False

library
    if flag(debug)
        cpp-options: -DDEBUG

    exposed-modules:    Database.Persist.ODBC

    ghc-options:   -Wall -O2

    build-depends: base         >= 4        && < 5
                , text          >= 0.11
                , aeson         >= 0.6
                , time          >= 1.4
                , conduit       >= 1.0
                , containers    >= 0.4
                , transformers  >= 0.3
                , convertible   >= 1.0
                , HDBC          >= 2.2
                , HDBC-odbc     >= 2.2 
--     && < 2.3
                , persistent    >= 1.2

source-repository head
  type:     git
  location: git://github.com/odr/persistent-odbc.git

