name:               persistent-odbc
version:            0.1.2.0
synopsis:           Backend for the persistent library using ODBC
description:        Based on HDBC-ODBC. Functionality for modifying db-schema is not supported. Such functionality should be supported in additional packages specified for database like persistent-odbc-oracle, persistent-odbc-msql and so on.
license:            MIT
license-file:       LICENSE
author:             Grant Weyburne
maintainer:         gbwey9@gmail.com
category:           Database, Yesod
cabal-version:      >= 1.8
build-type:         Simple
stability:          Experimental

Flag debug
        Default: False

Flag test
  Description: test.
  Default: True
  
library
    if flag(debug)
        cpp-options: -DDEBUG

    exposed-modules:    Database.Persist.ODBC
                      , Database.Persist.ODBCTypes
                      , Database.Persist.MigratePostgres
                      , Database.Persist.MigrateMySQL
                      , Database.Persist.MigrateMSSQL
                      , Database.Persist.MigrateOracle
--    if flag(test)
--                    exposed-modules:
                         , TestODBC
                        , FtypeEnum

    ghc-options:   -Wall -O2

    build-depends: base         >= 4        && < 5
                , text          >= 0.11
                , aeson         >= 0.6
                , time          >= 1.4
                , conduit       >= 1.0
                , containers    >= 0.4
                , transformers  >= 0.3
                , convertible   >= 1.0
                , HDBC          >= 2.2
                , HDBC-odbc     >= 2.2 
                , persistent    >= 1.2
                , monad-logger
                , resourcet
                , persistent-template
                , bytestring
--    if flag(test)
--               build-depends: 
                   , esqueleto 
                   ,blaze-html
    
    
test-suite test
  type: exitcode-stdio-1.0
  ghc-options:    -Wall
  hs-source-dirs: .
  main-is:        TestODBC.hs
  build-depends: base         
                , text          
                , aeson         
                , time          
                , conduit       
                , containers    
                , transformers  
                , convertible   
                , HDBC          
                , HDBC-odbc     
                , persistent    
                -- , monad-logger
                , resourcet
                , persistent-template
                , bytestring

      -- Test-only dependencies
                , esqueleto
                , blaze-html
    , containers
    , HUnit
    , QuickCheck
    , hspec               >= 1.3 && < 1.8
    , monad-control
    , monad-logger        >= 0.3
    
source-repository head
  type:     git
  location: git://github.com/gbwey/persistent-odbc.git

