name:               persistent-odbc
version:            0.1.2.0
synopsis:           Backend for the persistent library using ODBC
description:        Based on HDBC-ODBC. Functionality for modifying db-schema is not supported. Such functionality should be supported in additional packages specified for database like persistent-odbc-oracle, persistent-odbc-msql and so on.
license:            MIT
license-file:       LICENSE
author:             Grant Weyburne
maintainer:         gbwey9@gmail.com
category:           Database, Yesod
cabal-version:      >= 1.8
build-type:         Simple
stability:          Experimental

Flag debug
  Default: False

Flag tester
  Default: False
  
Flag ubuntu
  Default: False
  
library
  if flag(debug)
    cpp-options: -DDEBUG


  exposed-modules:    Database.Persist.ODBC
                    , Database.Persist.ODBCTypes
                    , Database.Persist.MigrateOracle
                    , Database.Persist.MigratePostgres
                    , Database.Persist.MigrateSqlite
                    , Database.Persist.MigrateMSSQL
                    , Database.Persist.MigrateMySQL
                    , Database.Persist.MigrateDB2
                    , Test1
                    

  ghc-options:   -Wall -O2

  build-depends:      base         >= 4        && < 5
                    , text          >= 0.11
                    , aeson         >= 0.6
                    , time          >= 1.4
                    , conduit       >= 1.0
                    , containers    >= 0.4
                    , transformers  >= 0.3
                    , convertible   >= 1.0
                    , HDBC          >= 2.2
                    , HDBC-odbc     >= 2.2 
                    , monad-logger
                    , resourcet
                    , persistent-template
                    , persistent
                    , bytestring

  if flag(tester) 
                    exposed-modules: TestODBC
                                   , FtypeEnum
                    build-depends: blaze-html
                                 , esqueleto

  if flag(ubuntu) 
                    exposed-modules: Test2
                    build-depends: persistent-sqlite
                                 , persistent-mysql
                                 , persistent-postgresql
